[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Solomon Lambert <sol.lambert@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/sollambert/hello-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.63"
wasm-bindgen = "0.2"
